# Itinerary-mcp-server

./: .gitignore  README.md  api_mcp_server.py
app/: main.py  schemas.py
fastapi/: Dockerfile  data.json  pyproject.toml  settings.py
fastapi/app/: db.py  grade.py  location.py  main.py  prompt.py  schemas.py
mcp-server/: Dockerfile  csv_mcp_server.py  prompt.py  pyproject.toml
